fix: layout shifts caused by scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -175,6 +175,11 @@ html {
   @apply scroll-smooth;
 }
 
+html body[data-scroll-locked] {
+  overflow: visible !important;
+  margin-right: 0 !important;
+}
+
 [id] {
   scroll-margin-top: 100px;
 }
